programs/2-typecheck/invalid/example/4.4-binaryexp1.go
// invalid binary exp: && with types int and bool
package test

var a bool = true && 1;